--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "connect-mongodb-session": "^3.1.1",
-    "cookie-parser": "^1.4.6",
-    "cookies": "^0.8.0",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
